[material] -> add new api: updateAmount
